GitHub/src/objects/Risk_Assessment_Disposition__c.object
<CustomObject>
    <fields>
        <fullName>Disposition_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will update with the user that updated the Status to Approved.</description>
        <label>Disposition Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment_Dispositions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition_Comments__c</fullName>
        <label>Disposition Analyst Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid Performance – Approved</fullName>
                </value>
                <value>
                    <fullName>Valid Performance – Assigned Event</fullName>
                </value>
                <value>
                    <fullName>Valid Performance – Other</fullName>
                </value>
                <value>
                    <fullName>Further Review / Research Required</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Written Warning</fullName>
                </value>
                <value>
                    <fullName>Final Written Warning</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Month_End__c</fullName>
        <label>Fiscal Month End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disposition Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment_Dispositions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Comments__c</fullName>
        <label>Disposition Approver Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_PERNR__c</fullName>
        <label>Sales Rep PERNR</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Text__c</fullName>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Further Review</fullName>
                </value>
                <value>
                    <fullName>Sent to Security</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>